add linter to ci (fix)

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -19,3 +19,5 @@ jobs:
         run: bundle install
       - name: run tests
         run: bin/test
+      - name: run linter
+        run: bundle exec rake standard
