attempt to fix tests on ci

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -9,6 +9,14 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    services:
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - uses: actions/checkout@v3
       - name: set up ruby
@@ -19,5 +27,8 @@ jobs:
         run: bundle install
       - name: run tests
         run: bin/test
+        env:
+          REDIS_HOST: redis
+          REDIS_PORT: 6379
       - name: run linter
         run: bundle exec rake standard
